# Form_Filler_Tool

./: .gitignore  CMakeLists.txt  README.md
data/: input.csv
include/: DataLoader.h  Encoding.h  FormFiller.h  NetworkClient.h
src/: DataLoader.cpp  Encoding.cpp  FormFiller.cpp  NetworkClient.cpp  main.cpp
